Style Fixes to OnPrem Page, added labels, remove overflow-x
Summary:
Removed overflow-x added Labels
{F2018}

Test Plan:
Go to http://localhost:3000/#/config?tab=onprem
Form should be as in screenshot

Reviewers: karthik, shawn, ram

Reviewed By: ram

Subscribers: eng

Differential Revision: https://phabricator.dev.yugabyte.com/D1061

--- a/managed/ui/src/pages/stylesheets/App.scss
+++ b/managed/ui/src/pages/stylesheets/App.scss
@@ -121,6 +121,7 @@ ul {
     margin-left: 90px;
     margin-top: 40px;
     padding-top: 25px;
+    overflow-x: hidden;
 }
 
 .inline-display {
